--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,1 +1,2 @@
+#external.service.url = http://54.94.180.222:8080/mooRestServices-1.0.0/events/20476209
 external.service.url = http://54.94.180.222:8080/mooRestServices-1.0.0/events/20476209
